read/decode complex test file